--- a/include/html-header.org
+++ b/include/html-header.org
@@ -1,4 +1,5 @@
 #+HTML: <div class="A4"><section class="sheet">
+#+HTML: <div class="hexagon"><div class="hexTop"></div><div class="hexBottom"></div></div>
 
 * Piotr Limanowski
   :PROPERTIES:
