--- a/index.org
+++ b/index.org
@@ -1,4 +1,5 @@
 #+TITLE: Piotr Limanowski
+#+TAGS: @scala @elixir @js @java @aws @akka @fp
 #+SETUPFILE: include/html.conf.org
 
 #+INCLUDE: include/html-header.org
@@ -13,38 +14,37 @@
   :PROPERTIES:
   :HTML_CONTAINER_CLASS: experience
   :END:
-** TODO Technical Architect - Schibsted Tech Polska
+** DONE Technical Architect - Schibsted Tech Polska :scala:elixir:js:docker:aws:akka:
+   CLOSED: [2017-04-12 Wed 09:42]
 *** Jan 2015 - to date
- As a Software Architect and Fullstack Dev with Java, Scala and most recently Elixir as a part of a small team I was tasked to migrate a legacy application to a modern cloud-backed multi-module micro service-based application. 
- We migrated the old monolith to Docker and CoreOS solution based upon AWS. Currently we continue to deliver new services using Scala, Java and Elixir.
+    + Co-lead innovative project of migrating a whole media house into Amazon Web Services reducing operations costs and delivery times
+    + Built a highly-optimised, business workflow-oriented, distributed authorisation, authentication, and payment layer built on top of Scala (both actor model - akka and functional typelevel stack) and Elixir
+    + Designed and built administrative tools for process management based upon Elixir/OTP improving monitoring, response times and error handling
+    + Built development tools and continuous delivery processes that improved development and delivery times by a level of magnitude
 
- # *Scala*, *Elixir*, *JavaScript*, *Docker*, *AWS*, *Akka*, *Redis*, *MongoDB*, *PostgreSQL*
-
-** TODO Technical Architect - Middleware Services - Nordea
+** DONE Technical Architect - Middleware Services - Nordea       :java:scala:
+   CLOSED: [2017-04-12 Wed 12:07]
 *** Jan 2012 - Dec 2014
- As a Principal Developer and Technical Architect I have been responsible for delivering of the Service Oriented Middleware services for the company. The approach assumed fast service delivery, scalability, simple integration and changeability.
-
- # *Java*, *AspectJ*, *Oracle*
-
-** TODO Java Developer - Financial Analysis & Reporting - Nordea
+    + Designed and built middleware, business services stack enabling fast service delivery, scalability, simple integration and changeability
+    + Built and introduced development tools and continuous delivery processes that improved development and delivery times by a level of magnitude
+** DONE Java Developer - Financial Analysis & Reporting - Nordea  :java:ruby:
+   CLOSED: [2017-04-12 Wed 12:07]
 *** April 2011 - Dec 2011
- The aim of the project was to deliver an application for rating calculation, analysis and reporting of corporate customers’.
-
-** TODO Java Developer - File Delivery Automation - Nordea
+    + Lead and implemented backends for an international rating calculation, analysis and reporting tool
+** DONE Java Developer - File Delivery Automation - Nordea        :java:ruby:
+   CLOSED: [2017-04-12 Wed 12:07]
 *** April 2011 - Dec 2011
- The aim of the project was to deliver a common, automated, scalable and managed solution for inter and intra-company  le deliveries.
-
-** TODO Java Developer - KAOS Consulting
++ The aim of the project was to deliver a common, automated, scalable and managed solution for inter and intra-company  le deliveries.
+** DONE Java Developer - KAOS Consulting                 :java:spring:hadoop:
+   CLOSED: [2017-04-12 Wed 12:07]
 *** Oct 2010 - April 2011
- I was picked as a developer for the project from an International Exchange Bureau draft. The aim of the project was to deliver an automated data analysis and trend recognition tool along with cross-system integration.
+ + Picked as a top-developer for a project by empolyer throught International Exchange Bureau draft 
+ + Built an automated data analysis and trend recognition tool
+ + Implemented intra-language interfaces to accomodate existing subsystems providing an isolation layer
 
- # *Java*, *Spring Core*, *Spring DM*, *JMS*, *Hadoop*, *MongoDB*
-
-** TODO Web Developer, m.photoblog.pl - PixNet
+** TODO Web Developer, m.photoblog.pl - PixNet                  :php:js:java:
 *** Oct 2010 - Jan 2009
- The aim of the project was to build a mobile application for the biggest polish photoblogging platform.
-
- # *PHP*, *JavaScript*, *Java*, *HTML*, *CSS*
++ Built a mobile website and designed frontends  mobile application for the biggest polish photoblogging platform.
 
 ** TODO Web Developer, PhotoSplash - PixNet
 *** Oct 2010 - Jan 2009
