🐛️ Extra char in footer

--- a/include/pl.org
+++ b/include/pl.org
@@ -3,4 +3,4 @@
   :PROPERTIES:
   :HTML_CONTAINER_CLASS: footer
   :END:
-I hereby give consent for my personal data included in the job offer to be processed for the purposes of recruitment under the Data Protection Act 1997 (Dz. U. no. 133, item 883)”
+I hereby give consent for my personal data included in the job offer to be processed for the purposes of recruitment under the Data Protection Act 1997 (Dz. U. no. 133, item 883)
