--- a/include/html.conf.org
+++ b/include/html.conf.org
@@ -4,6 +4,7 @@
 #+DESCRIPTION: a personal page for Piotr Limanowski - a full-time señor '(#scala #elixir #haskell) code arsonist & el modo evil brujito. Part-time #hoverboard'er lifting heavy shit 🏴 Time considered monotonic.
 #+HTML_CONTAINER_CLASS: article
 #+HTML_HEAD_EXTRA: <link rel="shortcut icon" href="https://codearsonist.com/favicon.ico" />
-#+HTML_HEAD_EXTRA: <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paper-css/0.3.0/paper.css">
+#+HTML_HEAD_EXTRA: <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paper-css/0.3.0/paper.css" />
 #+HTML_HEAD_EXTRA: <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto+Slab:700,500,400,300|Roboto:700,500,400,300" />
+#+HTML_HEAD_EXTRA: <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 #+HTML_HEAD_EXTRA: <link rel="stylesheet" type="text/css" href="./static/resume.css" />
